   option requires R (>= 4.1.0) and has no effect in early versions of R.

NEW FEATURES:

 * Added argument 'socketOptions' to makeClusterPSOCK(), which sets the
   corresponding R option on each cluster node when they are launched.

BUG FIXES:

 * isForkedChild() would only return TRUE in a forked child process, if and
   only if, it had already been called in the parent R process.


Version: 1.28.1 [2021-09-09]

CRAN POLICIES:

 * example("isNodeAlive") now uses \donttest{} to avoid long (> 10 s) elapsed
   run times on MS Windows.
   

Version: 1.28.0 [2021-08-27]
   
NEW FEATURES:

 * Add isNodeAlive() to check whether a cluster and cluster nodes are
   alive or not.

 * Add isForkedChild() to check whether or not the current R process is a
   forked child process.
   
BUG FIXES:

 * Environment variable 'R_PARALLELLY_SUPPORTSMULTICORE_UNSTABLE' was
   incorrectly parsed as a logical instead of a character string. If the
   variables was set to, say, "quiet", this would cause an error when the
   package was loaded.

 * makeClusterPSOCK() failed to fall back to setup_strategy = "sequential",
   when not supported by the current R version.
 

Version: 1.27.0 [2021-07-19]

NEW FEATURES:

 * availableCores() and availableWorkers() now respects environment variable
   'BIOCPARALLEL_WORKER_NUMBER' introduced in BiocParallel (>= 1.27.2). They
   also respect 'BBS_HOME' which is set on the Bioconductor check servers to
   limit the number of parallel workers while checking Bioconductor packages.

WORKAROUND:

 * makeClusterPSOCK() and parallel::makeCluster() failed with error "Cluster
   setup failed. <n> of <n> workers failed to connect." when using the new
   default 'setup_strategy = "parallel"' and when the 'tcltk' package is
   loaded when running R (>= 4.0.0 && <= 4.1.0) on macOS. Now 'parallelly'
   forces setup_strategy = "sequential" when the 'tcltk' package is loaded
   on these R versions.

BUG FIXES:
